// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly H1 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Black",
        "fontSize": 28,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H1 darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Black",
        "fontSize": 28,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H1 green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Black",
        "fontSize": 28,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H1 lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Black",
        "fontSize": 28,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H2 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 26,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H2 blue50 1`] = `
<Text
  blue50={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 26,
      },
      undefined,
      Object {
        "color": "#3957D0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H2 darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 26,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H2 green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 26,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H2 lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 26,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H3 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 22,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H3 center 1`] = `
<Text
  center={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 22,
      },
      undefined,
      Object {
        "textAlign": "center",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H3 darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 22,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H3 green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 22,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly H3 lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 22,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Link 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <Text
    style={
      Array [
        Object {
          "color": "#4BB377",
          "fontFamily": "Inter-Medium",
          "fontSize": 18,
          "textDecorationLine": "underline",
        },
        undefined,
      ]
    }
    url="http://nmf.earth"
  >
    test
  </Text>
</TouchableOpacity>
`;

exports[`renders correctly NavHeader 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Bold",
        "fontSize": 20,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary blue 1`] = `
<Text
  blue={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#3957D0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary bold 1`] = `
<Text
  bold={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Bold",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary center 1`] = `
<Text
  bold={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Bold",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary red 1`] = `
<Text
  red={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#FA4646",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Primary white 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 18,
      },
      undefined,
      Object {
        "color": "#FFFFFF",
      },
    ]
  }
  white={true}
>
  test
</Text>
`;

exports[`renders correctly Secondary 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary bold 1`] = `
<Text
  bold={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Bold",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary center 1`] = `
<Text
  center={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "textAlign": "center",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary lightWeightText 1`] = `
<Text
  lightWeightText={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Light-BETA",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary orange 1`] = `
<Text
  orange={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#EB9276",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary red 1`] = `
<Text
  red={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#FA4646",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Secondary white 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
      },
      undefined,
      Object {
        "color": "#FFFFFF",
      },
    ]
  }
  white={true}
>
  test
</Text>
`;

exports[`renders correctly Tertiary 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary bold 1`] = `
<Text
  bold={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Bold",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary center 1`] = `
<Text
  center={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "textAlign": "center",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary darkGray 1`] = `
<Text
  darkGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "color": "#595D58",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary green 1`] = `
<Text
  green={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "color": "#4BB377",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary lightGray 1`] = `
<Text
  lightGray={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "color": "#9CA6A0",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary lightWeightText 1`] = `
<Text
  lightWeightText={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "fontFamily": "Inter-Light-BETA",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary red 1`] = `
<Text
  red={true}
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "color": "#FA4646",
      },
    ]
  }
>
  test
</Text>
`;

exports[`renders correctly Tertiary white 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111714",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
      },
      undefined,
      Object {
        "color": "#FFFFFF",
      },
    ]
  }
  white={true}
>
  test
</Text>
`;
